Import of ASCOPE/XML-Filter-XML_Directory_Pruner-1.1 from CPAN.
gitpan-cpan-distribution: XML-Filter-XML_Directory_Pruner
gitpan-cpan-version:      1.1
gitpan-cpan-path:         ASCOPE/XML-Filter-XML_Directory_Pruner-1.1.tar.gz
gitpan-cpan-author:       ASCOPE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Perl extension XML::Filter::XML_Directory_Pruner.
 
+1.1  Tue Jul 02 2002
+
+     - Added $pkg->on_enter_start_element()
+
+     - Added $pkg->on_exit_end_element()
+
+     - Added $pkg->current_level()
+
+     - Added $pkg->skip_level()
+
+     - Fixed a typo in test.pl
+
+     - Updated POD
+
 1.0  Thu May 04 2002
 
      - original version.
