--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension XML::Filter::XML_Directory_Pruner.
 
+1.2  Fri Jul 05 2002
+
+     - Added package method __PACKAGE__->mtype()
+
+     - Updated $pkg->debug() to accept arguments > 1
+
+     - Updated $pkg->exclude and $pkg->include to accept multiple 'matching' criteria (is backwards compatible)
+
+     - Updated POD
+
 1.1  Tue Jul 02 2002
 
      - Added $pkg->on_enter_start_element()
