--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension XML::Filter::XML_Directory_Pruner.
 
+1.3  Sat Jul 20	2002
+
+     - Fixed a bug when exclude_matching
+
+     - Added debugging output when debug >= 4
+
+     - Upped requirement for XML::Directory to 0.97
+
 1.2  Fri Jul 05 2002
 
      - Added package method __PACKAGE__->mtype()
